# optimization-benchmarks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  file.md  pyproject.toml
optimization_benchmarks/: __init__.py  cli.py  functions.py  metadata.py
test_install/: pyvenv.cfg
test_install/Scripts/: activate  activate.bat
tests/: __init__.py  test_functions.py
